Refactor code to replace StringUtils with Strings and update related imports; remove deprecated CrawlBootstrapStep class